fix(m08): stabilize evidence operation ordering